move it all around you wanker. also make a wood page so you can do some reno reno reno

--- a/htdocs/contact.html
+++ b/htdocs/contact.html
@@ -71,29 +71,17 @@
 
 
 
-<aside>
-	<p>
-		<a href="mailto:will@willdayble.com"><i class="ss-mail"></i></a>
-		<a href="//twitter.com/willdayble"><i class="ss-social-regular ss-twitter"></i></a>
-		<a href="//linkedin.com/in/willdayble"><i class="ss-social-regular ss-linkedin"></i></a>
-	</p>
-</aside>
+<aside class="yeah"></aside>
 
-
-
-<article id="home">	
-	<h2>Hello, internet.</h2>
-	<p>I&rsquo;m doing a profoundly poor job of <a href="wood">renovating</a> my house right now.</p> 
-	<p>I vomit <a href="#speaking">keynotes</a> at big companies and <a href="#projects">start little</a> ones.</p>
-	<p>In my spare time, I don’t have any.</p>
-	<p><em>- Will Dayble.</em>
-	<nav>
-	  <p><a data-nav class="btn" href="work">Work stuff <i class="ss-right"></i></a></p>
-	  <p><a data-nav class="btn" href="speaking">Speaking <i class="ss-right"></i></a></p>
-	  <p><a data-nav class="btn" href="wood">I want your wood <i class="ss-right"></i></a></p>
-	  <p><a data-nav class="btn" href="contact">Get in contact <i class="ss-right"></i></a></p>
-	</nav> 
+<article id="contact">
+	<a data-nav class="btn btn-back" href="/"><i class="ss-left"></i> Home</a>
+	<h2>Get in touch</h2>
+	<p><a target="_blank" class="btn btn-icon" href="mailto:will@willdayble.com"><i class="ss-mail"></i> will@willdayble.com</a></p>
+	<p><a target="_blank" class="btn btn-icon" href="//twitter.com/willdayble"><i class="ss-social-regular ss-twitter"></i> @willdayble</a></p>
+	<p><a target="_blank" class="btn btn-icon" href="//linkedin.com/in/willdayble"><i class="ss-social-regular ss-linkedin"></i> willdayble</a></p>
+	<p><a target="_blank" class="btn btn-icon" href="//facebook.com/willdayble"><i class="ss-social-regular ss-facebook"></i> willdayble</a></p>
 </article>
+
 
 <!-- <script src="design/vendor/puretabs-master/puretabs.min.js"></script> -->
 <script src="design/vendor/ss-glyphish-outlined/ss-glyphish-outlined.js"></script>
