--- a/htdocs/wood.html
+++ b/htdocs/wood.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 
 	<!-- general metadata -->
-	<title>Wood - Will Dayble</title>
+	<title>Will Dayble</title>
 	<meta name="keywords" content="Squareweave, Digital Technology, Web Development, Social Good, Social Impact, Social Enterprise, Startup, Digital Solutions, Innovation, Digital Partnership, Mobile App Development, OurSay, Fitzroy GSD">
 	<meta name="description" content="Molotovs flung and keynotes spoken">
 	<link rel="shortcut icon" href="http://willdayble.com/design/images/dude.png">
@@ -49,18 +49,15 @@
 	<meta name="msapplication-TileImage" content="design/images/ico/ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
 
-
-	<!-- stoled from SQW -->
-	<link rel="stylesheet" type="text/css" href="design/css/go.css" media="all">
-	<link rel="stylesheet" type="text/css" href="design/css/hax.css" media="all">
 			
-	<!--[if IE ]><!-- Design Element 'ie' not found --><![endif]-->
+	<!-- stoled from SQW -->
+	<link rel="stylesheet" type="text/css" href="design/css/normalize.css" media="all">
+	<link rel="stylesheet" type="text/css" href="design/vendor/ss-social-regular/ss-social-regular.css" media="all">	
+	<link rel="stylesheet" type="text/css" href="design/vendor/ss-glyphish-outlined/ss-glyphish-outlined.css" media="all">
+	<link rel="stylesheet" type="text/css" href="design/css/tosser.css" media="all">
+			
 	<!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->	
 	<!--[if lt IE 8]><script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/chrome-frame/1/CFInstall.min.js"></script><![endif]-->
-	
-	<script src="//use.typekit.net/tqj4fyp.js"></script>
-	<script>try{Typekit.load();}catch(e){}</script>
-
 	
 </head>
 
@@ -72,45 +69,24 @@
 </p>
 <![endif]-->
 
-<header class="js_header wood"> <!-- data-spy="affix" data-offset-top="2" -->
-	<div class="constrain">
-		<a class="btn btn-default logo" href="/">Will Dayble</a>
 
-		<nav class="pull-right">
-			<a class="btn btn-default btn-menu js_menu_trigger"><span class="text">Menu</span> <i class="ss-gizmo ss-rows"></i><i class="ss-gizmo ss-delete"></i></a>
-			<div class="drop">
-				<a class="btn btn-default btn-icon" href="//twitter.com/willdayble" target="_blank"><i class="ss-social ss-twitter"></i></a>
-				<a class="btn btn-default btn-icon" href="//linkedin.com/in/willdayble" target="_blank"><i class="ss-social ss-linkedin"></i></a>
-<!-- 				<a class="btn btn-default btn-icon" href="//facebook.com/willdayble" target="_blank"><i class="ss-social ss-facebook s"></i></a> -->
-				<a class="btn btn-default btn-home" href="/">Home</a>
-				<a class="btn btn-default" href="speaking">Speaking</a>
-				<a class="btn btn-default btn-cta" href="#contact">Contact</a>
-			</div>
-		</nav>
-	</div>
 
-</header>
+<aside class="wood">
+</aside>
 
-<section class="fill wood">
-	<p>I want your wood</p>
-	<a class="btn" href="#wood"><i class="ss-gizmo ss-navigatedown"></i> Show me it</a>
-</section>
+<article id="speaking">
+	<a data-nav class="btn btn-back" href="/#"><i class="ss-left"></i> Home</a>
+	<a data-nav class="btn btn-next" href="#speaking"><i class="ss-right"></i> Speaking</a>	
 
-<article class="" id="wood">
-	<div class="constrain">
 		<h2>Got wood?</h2>
 
-		<div class="progress progress-wood" data-spy="affix">
-			<div class="progress-bar progress-bar-success" style="width:5%;"></div>
-			<div class="perc" style="width:100%;">5% of 319m<sup>2</sup> collected</div>
-		</div>
 		<h3>I am renovating a house. </h3>
-		<p>I&rsquo;d like the wooden bits of this house to be made entirely from recycled or reclaimed material.</p>
-		<p>If you are willing to give me wood, of any quality, in any quantity, I will gladly take it all.</p>
+		<p>The wooden bits of this stupid house should be made mostly from recycled and / or reclaimed material, because ENVIRONMENT and shit.</p>
+		<p>If you can give me your wood, I will gladly take it all.</p>
 		<p>I&rsquo;ll even give you pictures of what I do with it.</p>
-		<p>I am willing to write your name on whatever your wood goes into, by way of thanks. Also, possibly, for posterity.</p>
+		<p>I live in central Melbourne, but I have a big white van and can travel.</p>
 		<hr>
-		<p>Some ways I&rsquo;ll use your wood:</p>
+		<h3>How I&rsquo;ll use your wood:</h3>
 		<dl>
 			<dt>1</dt><dd>Planter boxes;</dd>
 			<dt>2</dt><dd>A large dining table;</dd>
@@ -118,87 +94,21 @@
 			<dt>4</dt><dd>Kitchen counters and shelves;</dd>
 			<dt>5</dt><dd>Window frames;</dd>
 			<dt>6</dt><dd>Structural support;</dd>
-			<dt>7</dt><dd>A staircase;</dd>			
-			<dt>8</dt><dd>One bookshelf with a slidey ladder;</dd>						
-			<dt>8</dt><dd>Some lamps;</dd>						
-			<dt>10</dt><dd>And, of course, decking.</dd>
+			<dt>7</dt><dd>A couple of staircases;</dd>			
+			<dt>8</dt><dd>Great big bookshelf with a slidey ladder;</dd>						
+			<dt>8</dt><dd>Rooftop garden decking;</dd>						
+			<dt>10</dt><dd>Other things I&rsquo;ve not thought of yet.</dd>
 		</dl>
+	<h3>Tell me about your wood</h3>
+	<p><a target="_blank" class="btn btn-icon" href="mailto:will@willdayble.com"><i class="ss-mail"></i> will@willdayble.com</a></p>
+	<p><a target="_blank" class="btn btn-icon" href="//twitter.com/willdayble"><i class="ss-social-regular ss-twitter"></i> @willdayble</a></p>
 
-		<blockquote>
-			<q>&ldquo;Will wants, deserves, &amp; can handle all the wood you can give him.&rdquo;</q>
-			<cite>
-				<img src="design/images/people/jason.png" alt="Jason">
-				- Dr. Jason Fox
-				<a href="http://www.drjasonfox.com/" class="role">Motivation Scientist</a>
-			</cite>
-		</blockquote>			
-	</div>
-</article>
+</article> 
 
-<article class="reverse red">
-	<div class="constrain">
-		<h2>Give me wood</h2>
-		<h3 class="subhead"><a href="mailto:wood@willdayble.com">wood@willdayble.com</a></h3>
-		<p>Let me know these things:</p>
-		<dl>
-			<dt>1</dt><dd>Where your wood is (near Melbourne is best);</dd>
-			<dt>2</dt><dd>How much wood you have;</dd>
-			<dt>3</dt><dd>If you&rsquo;re willing to show me pictures.</dd>
-		</dl>
-		<p>That&rsquo;s <a href="mailto:wood@willdayble.com">wood@willdayble.com</a>.</p>
-		<p>Please and thank you.</p>
-		<p><em>- W.</em></p>
-	</div>
-</article>
-
-
-<!--
-What is the name of your event?
-What is your event’s website?
-Who is running the event? Are they for-profit or non-profit?
-What dates is it running? What date/time would you like me to speak?
-What subject would you like me to speak on?
-How long would you like me to speak for?
-How large is the audience and how would you characterise them (eg. professionals, hobbyists, experts in a particular field?)
-Where is your event being held? Will you cover travel and accommodation expenses?
-Will speakers be remunerated for their time?
-Please provide a link to your event’s code of conduct or anti-harassment policy (Note that I generally will not speak at events, especially in the computing/technology field, which do not have a suitable policy clearly posted on their website.)
--->
-
-
-
-<footer id="contact">
-	<div class="constrain">
-		<!-- <a class="brand spinme" href="/">Truth</a> -->
-		<p class="contact">
-			<a href="tel:+1300771337"><i class="ss-gizmo ss-mail"></i>will@willdayble.com</a>
-		</p>
-		<p class="social">
-			<a href="//www.facebook.com/willdayble" target="_blank"><i class="ss-social ss-facebook"></i>Facebook</a>
-			<a href="//www.twitter.com/willdayble" target="_blank"><i class="ss-social ss-twitter"></i>Twitter</a>			
-			<a href="//www.linkedin.com/in/willdayble" target="_blank"><i class="ss-social ss-linkedin"></i>LinkedIn</a>
-		</p>
-	</div>
-</footer>
-
-
-<!-- FOOTER -->
-<!-- vendor / library js -->
-<script src="design/js/jquery-1.9.1.min.js" type="text/javascript"></script>
-
-
-<script src="design/js/affix.js" type="text/javascript"></script>
-
-<!-- app javascript -->
-
-
-
-
-<!-- cached scripts enabled -->
-<script src="design/js/sqw.js" type="text/javascript"></script>
-<!-- <script type="text/javascript">$.extend(true, app, {"facebook":{"enabled":false},"responder":"static","user":{"exists":false},"nonce":"q-8ZZwfXs5HdNlY2TZhHd4$wM78FGh34W$NcsahDhy_fDLgkSLu_VjgVbcAs1DhE","url":"\/","typekit":{"enabled":false},"bugherd":{"enabled":false},"ga":{"enabled":true,"id":"UA-5821577-1","domain":null}});</script> -->
-
+<!-- <script src="design/vendor/puretabs-master/puretabs.min.js"></script> -->
+<script src="design/vendor/ss-glyphish-outlined/ss-glyphish-outlined.js"></script>
 <script>
+	/* groogles */
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -206,7 +116,6 @@ Please provide a link to your event’s code of conduct or anti-harassment polic
 
   ga('create', 'UA-5821577-9', 'auto');
   ga('send', 'pageview');
-
 </script>
 
 </body>
