--- a/htdocs/work.html
+++ b/htdocs/work.html
@@ -71,29 +71,34 @@
 
 
 
-<aside>
-	<p>
-		<a href="mailto:will@willdayble.com"><i class="ss-mail"></i></a>
-		<a href="//twitter.com/willdayble"><i class="ss-social-regular ss-twitter"></i></a>
-		<a href="//linkedin.com/in/willdayble"><i class="ss-social-regular ss-linkedin"></i></a>
-	</p>
+<aside class="optimus">
 </aside>
 
-
-
-<article id="home">	
-	<h2>Hello, internet.</h2>
-	<p>I&rsquo;m doing a profoundly poor job of <a href="wood">renovating</a> my house right now.</p> 
-	<p>I vomit <a href="#speaking">keynotes</a> at big companies and <a href="#projects">start little</a> ones.</p>
-	<p>In my spare time, I don’t have any.</p>
-	<p><em>- Will Dayble.</em>
-	<nav>
-	  <p><a data-nav class="btn" href="work">Work stuff <i class="ss-right"></i></a></p>
-	  <p><a data-nav class="btn" href="speaking">Speaking <i class="ss-right"></i></a></p>
-	  <p><a data-nav class="btn" href="wood">I want your wood <i class="ss-right"></i></a></p>
-	  <p><a data-nav class="btn" href="contact">Get in contact <i class="ss-right"></i></a></p>
-	</nav> 
+<article id="work">
+	<a data-nav class="btn btn-back" href="/"><i class="ss-left"></i> Home</a>
+	<a data-nav class="btn btn-next" href="speaking"><i class="ss-right"></i> Speaking</a>
+	<h2>Work</h2>
+	<p>When I&rsquo;m not at <a href="//fitzroyacademy.com">The Fitzroy Academy</a> I&rsquo;m usually playing <a href="http://www.rocketleaguegame.com/">Rocket League</a>.</p>
+	<div class="projects">
+		<a href="//fitzroyacademy.com"><img src="design/images/projects/fitzroy.png" alt="Fitzroy Academy"><strong>Fitzroy Academy</strong> <br>Founder</a>
+		<a href="//squareweave.com.au"><img src="design/images/projects/sqw.png" alt="Squareweave"><strong>Squareweave</strong> <br>Founder / Director</a>
+		<a href="//cowalition.com"><img src="design/images/projects/cow.png" alt="Cowalition"><strong>Cowalition</strong> <br>Founder</a>
+<!--
+		<a href="//gracefitzroy.com"><img src="design/images/projects/grace.png" alt="Grace"><strong>Grace Cafe</strong> <br>Founder</a>
+		<a href="//shift.vc"><img src="design/images/projects/shift.png" alt="Promo Bay"><strong>Shift</strong><br>Founder</a>	
+		<a href="//promobay.org"><img src="design/images/projects/tpb.png" alt="Promo Bay"><strong>The Promo Bay</strong><br>Founder</a>	
+-->
+		<a href="//chuffed.org"><img src="design/images/projects/chuffed.jpg" alt="Chuffed"><strong>Chuffed</strong> <br>Advisory Board</a>
+		<a href="//growstuff.org/"><img src="design/images/projects/growstuff.png" alt="GrowStuff"><strong>GrowStuff</strong><br>Advisory Board</a>				
+		<a href="//fitnesseverywhe.re"><img src="design/images/projects/fitness.png" alt="Chuffed"><strong>Fitness Everywhere</strong> <br>Chair, Investor</a>
+	</div>
 </article>
+
+<article class="xs">
+	<a data-nav class="btn btn-back" href="/"><i class="ss-left"></i> Home</a>
+	<a data-nav class="btn btn-next" href="contact"><i class="ss-right"></i> Get in touch</a>
+</article>
+
 
 <!-- <script src="design/vendor/puretabs-master/puretabs.min.js"></script> -->
 <script src="design/vendor/ss-glyphish-outlined/ss-glyphish-outlined.js"></script>
