stupid link stupid

--- a/htdocs/wood.html
+++ b/htdocs/wood.html
@@ -76,7 +76,7 @@
 
 <article id="speaking">
 	<a data-nav class="btn btn-back" href="/#"><i class="ss-left"></i> Home</a>
-	<a data-nav class="btn btn-next" href="#speaking"><i class="ss-right"></i> Speaking</a>	
+	<a data-nav class="btn btn-next" href="contact"><i class="ss-right"></i> Contact</a>	
 
 		<h2>Got wood?</h2>
 
