--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -84,7 +84,7 @@
 <article id="home">	
 	<h2>Hello, internet.</h2>
 	<p>I&rsquo;m doing a profoundly poor job of <a href="wood">renovating</a> my house right now.</p> 
-	<p>I vomit <a href="#speaking">keynotes</a> at big companies and <a href="#projects">start little</a> ones.</p>
+	<p>I vomit <a href="speaking">keynotes</a> at big companies and <a href="work">start little</a> ones.</p>
 	<p>In my spare time, I don’t have any.</p>
 	<p><em>- Will Dayble.</em>
 	<nav>
