move the cash around lol

--- a/htdocs/contact.html
+++ b/htdocs/contact.html
@@ -82,6 +82,11 @@
 	<p><a target="_blank" class="btn btn-icon" href="//facebook.com/willdayble"><i class="ss-social-regular ss-facebook"></i> willdayble</a></p>
 </article>
 
+<article class="footer">
+	<a data-nav class="btn btn-back" href="/"><i class="ss-left"></i> Back home</a>
+	<img src="design/images/aside/yeah.gif">
+</article>
+
 
 <!-- <script src="design/vendor/puretabs-master/puretabs.min.js"></script> -->
 <script src="design/vendor/ss-glyphish-outlined/ss-glyphish-outlined.js"></script>
