--- a/htdocs/speaking.html
+++ b/htdocs/speaking.html
@@ -230,9 +230,9 @@
 	</blockquote>		
 </article>		 
 
-<article>
-	<a data-nav class="btn btn-back" href="/"><i class="ss-left"></i> Home</a>
+<article class="footer">
 	<a data-nav class="btn btn-next" href="contact"><i class="ss-right"></i> Get in touch</a>
+	<img src="design/images/aside/yeah.gif">
 </article>
 
 <!-- <script src="design/vendor/puretabs-master/puretabs.min.js"></script> -->
