--- a/htdocs/wood.html
+++ b/htdocs/wood.html
@@ -105,6 +105,10 @@
 
 </article> 
 
+<article class="footer">
+	<a data-nav class="btn btn-next" href="contact"><i class="ss-right"></i> Get in touch</a>
+	<img src="design/images/aside/stacked_wood.jpg" alt="stacked_wood">
+</article>
 <!-- <script src="design/vendor/puretabs-master/puretabs.min.js"></script> -->
 <script src="design/vendor/ss-glyphish-outlined/ss-glyphish-outlined.js"></script>
 <script>
