--- a/htdocs/fees.html
+++ b/htdocs/fees.html
@@ -122,6 +122,11 @@
 </article>
 
 
+<article class="footer">
+	<a data-nav class="btn btn-next" href="contact"><i class="ss-right"></i> Get in touch</a>
+	<img src="design/images/aside/cash.gif" alt="cash">
+</article>
+
 <!-- <script src="design/vendor/puretabs-master/puretabs.min.js"></script> -->
 <script src="design/vendor/ss-glyphish-outlined/ss-glyphish-outlined.js"></script>
 <script>
