--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -95,6 +95,11 @@
 	</nav> 
 </article>
 
+<article class="footer">
+	<a data-nav class="btn btn-next" href="contact"><i class="ss-right"></i> Get in touch</a>
+	<img src="design/images/aside/yeah.gif" alt="renovation man">
+</article>
+
 <!-- <script src="design/vendor/puretabs-master/puretabs.min.js"></script> -->
 <script src="design/vendor/ss-glyphish-outlined/ss-glyphish-outlined.js"></script>
 <script>
