--- a/htdocs/work.html
+++ b/htdocs/work.html
@@ -94,9 +94,9 @@
 	</div>
 </article>
 
-<article class="xs">
-	<a data-nav class="btn btn-back" href="/"><i class="ss-left"></i> Home</a>
+<article class="footer">
 	<a data-nav class="btn btn-next" href="contact"><i class="ss-right"></i> Get in touch</a>
+	<img src="design/images/aside/yeah.gif">
 </article>
 
 
