tosser doing speaking

--- a/htdocs/contact.html
+++ b/htdocs/contact.html
@@ -75,11 +75,14 @@
 
 <article id="contact">
 	<a data-nav class="btn btn-back" href="/"><i class="ss-left"></i> Home</a>
-	<h2>Get in touch</h2>
+	<h2>Want to start something wonderful?</h2>
+	
+	<p><a class="btn btn-icon" href="tel:1300205170"><i class="ss-phone"></i> 1300 205 170</a></p>
 	<p><a target="_blank" class="btn btn-icon" href="mailto:will@willdayble.com"><i class="ss-mail"></i> will@willdayble.com</a></p>
 	<p><a target="_blank" class="btn btn-icon" href="//twitter.com/willdayble"><i class="ss-social-regular ss-twitter"></i> @willdayble</a></p>
 	<p><a target="_blank" class="btn btn-icon" href="//linkedin.com/in/willdayble"><i class="ss-social-regular ss-linkedin"></i> willdayble</a></p>
 	<p><a target="_blank" class="btn btn-icon" href="//facebook.com/willdayble"><i class="ss-social-regular ss-facebook"></i> willdayble</a></p>
+	<p><em>P.S. email is best.</em></p>
 </article>
 
 <article class="footer">
