--- a/htdocs/speaking.html
+++ b/htdocs/speaking.html
@@ -77,15 +77,15 @@
 	<a data-nav class="btn btn-back" href="/#"><i class="ss-left"></i> Home</a>
 	<a data-nav class="btn btn-next" href="#speaker-bio"><i class="ss-right"></i> Speaker Bio</a>
 
-	<h2>Keynotes / grace notes.</h2>
-	<p>I have been booked all around the world to make flappy noises with my lips to large crowds, which is a very odd thing to do if you think about it.</p>
-	<p>For bookings, get <a href="contact">in touch directly</a>, or speak to <a href="http://thesupernovatribe.com/" target="_blank">Rebecca at Supernova</a>, who manages a tribe of purpose-driven speakers including me.</p>
+	<h2>Speaking.</h2>
+	<p>I fly around the world and make flappy noises with my lips to motivate large crowds of people, which is a very odd thing to do if you think about it.</p>
+	<p>For bookings, get <a href="contact">in touch directly</a>.</p>
 	<nav>
 	  <p><a data-nav class="btn" href="#speaker-themes">Themes <i class="ss-right"></i></a></p>
 	  <p><a data-nav class="btn" href="#speaker-bio">Biography <i class="ss-right"></i></a></p>
 	  <p><a data-nav class="btn" href="#speaker-rider">Rider <i class="ss-right"></i></a></p>
 	  <p><a data-nav class="btn" href="#pics">Pictures <i class="ss-right"></i></a></p>
-	  <p><a data-nav class="btn" href="#contact">Book me <i class="ss-right"></i></a></p>
+	  <p><a data-nav class="btn" href="contact">Book me <i class="ss-right"></i></a></p>
 	</nav> 	
 </article>
 
@@ -98,7 +98,7 @@
 			<a class="role" href="https://twitter.com/superhighfives">- Charlie Gleason</a>, 
 			<a class="" href="https://unbound.co.uk/">Head of Product, Unbound</a>
 		</cite>
-	</blockquote>		
+	</blockquote>
 </article>
 
 
@@ -106,17 +106,18 @@
 	<a data-nav class="btn btn-back" href="#speaking"><i class="ss-left"></i> Speaking</a>
 	<a data-nav class="btn btn-next" href="#speaker-bio"><i class="ss-right"></i> Speaker Bio</a>
 	
-	<h3>I speak on these themes:</h3>
-
+	<h3>Themes</h3>
+	<p>I am most often booked for <em>provocations</em>. New beginnings, with a caffeinated audience, willing to stretch beyond the immediate.</p>
+	<p>Common themes include:</p>
 	<dl>
-		<dt>1</dt><dd>The Marvellous Internets: Where the internet / mobile  is taking us and resulting horizon questions;</dd>
-		<dt>2</dt><dd>Disruption: What the buzzwords actually mean, when to be scared, and what it means for leadership folks;</dd>
-		<dt>3</dt><dd>The geek approach: How tech people solve problems, and what learnings we can transfer to standard businesses / leadership issues (i.e. methodology, process, culture);</dd>
-		<dt>4</dt><dd>User Experience Design: Designing products for end users, user centric design / design thinking / digital + mobile-first platforms;</dd>
-		<dt>6</dt><dd>Getting things done: The subtle art of making real things happen instead of writing business plans;</dd>
-		<dt>7</dt><dd>Innovation Culture: Why are some companies innovative and some not? The artefacts, rituals and behaviours of innovation;</dd>
-		<dt>8</dt><dd>Social impact: Doing good while doing well, within a business context, for measurable social impact;</dd>		
+		<dt>1</dt><dd>Technology will eat everything: Where tech is taking us and what this means for normal people who don't own the robots;</dd>
+		<dt>2</dt><dd>Disruption / transformation: What the buzzwords <em>actually</em> mean, when to be scared, and what it means for leadership;</dd>
+		<dt>3</dt><dd>Experience Design: Creating an environment that is obsessive about designing for people. User centric design / design thinking / etc;</dd>
+		<dt>4</dt><dd>Getting shit done: The subtle art of making real things happen instead of writing lengthy business plans;</dd>
+		<dt>5</dt><dd>Innovation &amp; Culture: Why are some companies innovative and some not? The artefacts, rituals and behaviours of innovation;</dd>
+		<dt>6</dt><dd>Impact: Doing good while doing well, within a business context, in a way that creates measurable social impact;</dd>		
 	</dl>
+	<p>No keynote is the same, I&rsquo;d recommend talking to me about what you want to achieve - we can design something brilliant together.</p>
 </article> 
 
 <article class="alt">
@@ -136,15 +137,13 @@
 
 	<h2>Speaker Bio</h2>
 	<h3>50 words</h3>
-	<p>Will is an experienced speaker, covering topics from entrepreneurship and education to open innovation and technical trends, in formats ranging from high-profile keynotes to executive roundtables.</p>
-	<p>Anchored in a decade of gritty entrepreneurial and digital experience, Will delivers honest, direct, and thought provoking experiences for small and large audiences.</p>
+	<p>Will made his first dollar selling stolen lemons at age 6. His father taught him to code a year later. He's since founded multiple companies in digital, education and social enterprise. He delivers keynotes to big companies and starts small ones. In his spare time he doesn't have any.</p>
 	
 	<h3>Longer</h3>
-	<p>Will is an experienced speaker, covering topics from entrepreneurship and education to open innovation and technical trends, in a wide range of formats from high-profile keynotes to intimate masterclasses and executive roundtables.</p>
-	<p>Anchored in a decade of gritty entrepreneurial, social impact and digital work, Will delivers refreshingly honest, direct, and thought provoking experiences for small and large audiences alike.</p>
-	<p>In 2007 he founded Squareweave, a digital agency that helps social impact organisations do digital better. More recently, he’s a founder at online / offline education platform The Fitzroy Academy of Getting Sh!t Done, and Sotto Electric, an electric car retrofit company.</p>
-	<p>In his charitable life, Will helped create and fund The Cowalition of The Willing, a not for profit NGO that levers small-plot farming families in Cambodia out of poverty with debt-free loans, financial literacy, and cows.</p>
-	<p>His clients include banking and telco giants, large and small charities, and a slew of startups across the world.</p>
+	<p>Will made his first dollar selling stolen lemons at age 6. His father taught him to code a year later. He's since founded multiple companies in digital, education and social enterprise.</p>
+	<p>He&rsquo;s founded a digital agency, an NGO that helps small plot Cambodian farmers out of poverty, and an online education platform for social impact people. 
+	<p>As an experienced speaker and facilitator, he&rsquo;s covered topics from entrepreneurship and innovation to motivation science and tech trends, in formats ranging from high-profile keynotes to intimate masterclasses and executive roundtables.</p>
+	<p>His clients include the big guys and the little guys.</p>
 	<p>He sits on the boards of a few Australian social enterprises and mentors numerous young people in local and international startup communities.</p>
 	<p>In his spare time, Will doesn’t have any.</p>		
 	<hr id="pics">
@@ -193,7 +192,7 @@
 	<p>See <a href="http://speakerdiversity.com" target="_blank">speakerdiversity.com</a> for more on this.</p>
 
 	<h3>Audio visual</h3>
-	<p>I generally use my own laptop and clicker, and have my own VGA and DVI cable adaptors (I use a recent MacBook Air). If I must use your presentation tech, please ensure we are using an up to date version of Keynote, with a quality clicker ahead of time.</p>
+	<p>I use my own laptop and clicker. If I must use your presentation tech, please ensure we are using an up to date version of Keynote, with a quality clicker ahead of time.</p>
 	<p>I do not usually require sound output. I will let you know ahead of time if I do.</p>
 	<p>My laptop - or the speaker monitor - should be positioned to the side of the stage, within easy view of the most distant place I will be standing on the stage. I move around a lot.</p>
 	<p>For groups of more than about 20 people I prefer a wireless lavalier or head mic. I dance about and wave my arms, which doesn’t work with a handheld mic and is impossible behind a podium. </p>
@@ -201,7 +200,7 @@
 	<p>Tech glitches are never fun, so I will work with your tech team on an A/V check, preferably 20-30 minutes before I go on stage.</p>
 	<h3>Slides and handouts</h3>
 	<p>I do not convert my presentations to any standard template. My slides are purposefully crafted for each event, to match the content I deliver on the day.</p>
-	<p>I will happily supply you with a copy of my slides in PDF format to distribute to delegates after the event, just ask.</p>
+	<p>I will sometimes supply clients with a copy of my slides in PDF format to distribute to delegates after the event, just ask.</p>
 	<p>I retain ownership of all material I produce, and will sometimes make slides or working material available for download online after the event.</p>
 	<p>Feel free to take pictures before and during events, but please no flash photography during my talk, I am easily distracted.</p>
 	<p>Unless specifically agreed before the talk, you don’t have my permission to record, distribute or resell my talk or any of its material.</p>
@@ -216,6 +215,10 @@
 	<p>I like to speak to any executives and stakeholders before the event. Dinner the night before is lovely. This helps me to tune in with the group and their goals.</p>
 	<p>If you’d like me to hang around and be sociable afterwards, let me know. Often, the best learning happens in conversations after the main event is all wrapped up.</p>
 	<p>Tip: Overbooking a small room is much better than rattling around in a big one, and can have a big impact on how delegates remember the success of the event.</p>	
+
+
+	<h2>Book me</h2>	
+	<p><a data-nav class="btn" href="contact">Get in touch <i class="ss-right"></i></a></p>
 
 </article>
 
