--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -83,15 +83,13 @@
 
 <article id="home">	
 	<h2>Hello, internet.</h2>
-	<p>I&rsquo;m doing a profoundly poor job of <a href="wood">renovating</a> my house right now.</p> 
-	<p>I vomit <a href="speaking">keynotes</a> at big companies and <a href="work">start little</a> ones.</p>
-	<p>In my spare time, I don’t have any.</p>
-	<p><em>- Will Dayble.</em>
+	<p>I deliver <a href="speaking">keynotes</a> to big companies and <a href="work">start small</a> ones.</p>
+		<p>In my spare time, I don’t have any.</p>
+	<p><a href="contact">Book me</a> to speak at your next event if you&rsquo;d like to provoke an audience to think beyond certainty.</p>
 	<nav>
-	  <p><a data-nav class="btn" href="work">Work stuff <i class="ss-right"></i></a></p>
+	  <p><a data-nav class="btn" href="work">Work <i class="ss-right"></i></a></p>
 	  <p><a data-nav class="btn" href="speaking">Speaking <i class="ss-right"></i></a></p>
-	  <p><a data-nav class="btn" href="wood">I want your wood <i class="ss-right"></i></a></p>
-	  <p><a data-nav class="btn" href="contact">Get in contact <i class="ss-right"></i></a></p>
+	  <p><a data-nav class="btn" href="contact">Contact <i class="ss-right"></i></a></p>
 	</nav> 
 </article>
 
