--- a/htdocs/speaking.html
+++ b/htdocs/speaking.html
@@ -141,10 +141,9 @@
 	
 	<h3>Longer</h3>
 	<p>Will made his first dollar selling stolen lemons at age 6. His father taught him to code a year later. He's since founded multiple companies in digital, education and social enterprise.</p>
-	<p>He&rsquo;s founded a digital agency, an NGO that helps small plot Cambodian farmers out of poverty, and an online education platform for social impact people. 
-	<p>As an experienced speaker and facilitator, he&rsquo;s covered topics from entrepreneurship and innovation to motivation science and tech trends, in formats ranging from high-profile keynotes to intimate masterclasses and executive roundtables.</p>
-	<p>His clients include the big guys and the little guys.</p>
-	<p>He sits on the boards of a few Australian social enterprises and mentors numerous young people in local and international startup communities.</p>
+	<p>He&rsquo;s founded a <a href="http://squareweave.com.au/" target="_blank">digital agency</a>, an <a href="http://cowalition.com/" target="_blank">NGO</a> that helps small plot Cambodian farmers out of poverty, and an <a href="https://fitzroyacademy.com/" target="_blank">online education platform</a> for social impact people. 
+	<p>As an experienced speaker and facilitator, he&rsquo;s covered topics from entrepreneurship and innovation to near-futurism and tech trends, in formats ranging from auditorium-filling keynotes to intimate masterclasses and executive roundtables.</p>
+	<p>He sits on the boards of a few Australian businesses and mentors numerous young people in local and international startup communities.</p>
 	<p>In his spare time, Will doesn’t have any.</p>		
 	<hr id="pics">
 	<h3>Hi res pics</h3>
