new pics with leo yay

--- a/htdocs/fees.html
+++ b/htdocs/fees.html
@@ -70,19 +70,20 @@
 <![endif]-->
 
 
-<aside class="money"></aside>
+<aside class="inoffensive"></aside>
 
 
 <article id="fees">
 		<a data-nav class="btn btn-back" href="/"><i class="ss-left"></i> Home</a>
 		<a data-nav class="btn btn-next" href="#go"><i class="ss-right"></i> Get started</a>
 		<h2>Fees</h2>
-		<h3>The indicators below are a good guide for budgeting purposes.</h3>
+		<h3>These numbers are a guide.</h3>
+		<p>Speak to me <a href="contact">directly</a> to craft something unique together.</p>
 		<dl>
-			<dt>1</dt><dd>Keynote presentation* <span class="costs">$7,000 <small>+ GST</small></span></dd>
-			<dt>2</dt><dd>Half day workshop <span class="costs">$8,000 - $10,000 <small>+ GST</small></span></dd>
-			<dt>3</dt><dd>Full day workshop <span class="costs">$11,000 <small>+ GST</small></span></dd>
-			<dt>4</dt><dd>Event Guide** <span class="costs">$11,000 <small>+ GST</small></span></dd>
+			<dt>1</dt><dd>Keynote presentation* <span class="costs">$8,000 <small>+ GST</small></span></dd>
+			<dt>2</dt><dd>Half day workshop <span class="costs">$6,000 - $10,000 <small>+ GST</small></span></dd>
+			<dt>3</dt><dd>Full day workshop <span class="costs">$12,000 <small>+ GST</small></span></dd>
+			<dt>4</dt><dd><a href="#guide">Event Guide**</a> <span class="costs">$12,000 <small>+ GST</small></span></dd>
 		</dl>
 		<h3>No fee projects</h3>
 		<p>I sometimes do gigs free / low cost if it aligns with my other projects for that year. 2015 is all about <a href="http://fitzroygsd.com/" target="_blank">education</a>. </p>
@@ -92,7 +93,7 @@
 		<p>Prices quoted in Australian Dollars. Special rates may apply for education and non-profit organisations, and for multiple/bundled bookings.</p>
 		<p>International engagements can sometimes attract a higher fee.</p>
 		<p><em><strong>*</strong> For multi-day bookings, Will is also available to serve as an event guide at favourable rates.</em></p>
-		<p><em><strong>**</strong> <em>Event Guide</em> is like having an MC with a built in Keynote. I&rsquo;ll guide event introductions, speaking, thanks to sponsors, Q+A and then wrap it all up with a keynote touching on key themes of the day.</em></p>
+		<p id="guide"><em><strong>**</strong> <em>Event Guide</em> is like having an MC and panel moderator with a built in Keynote. I&rsquo;ll wrangle opening the event, speaking, thanks to sponsors, Q+A and then wrap it all up with an intimate keynote touching on key themes of the day.</em></p>
 </article>
 
 
