--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -84,13 +84,24 @@
 <article id="home">	
 	<h2>Hello, internet.</h2>
 	<p>I deliver <a href="speaking">keynotes</a> to big companies and <a href="work">start small</a> ones.</p>
-		<p>In my spare time, I don’t have any.</p>
-	<p><a href="contact">Book me</a> to speak at your next event if you&rsquo;d like to provoke an audience to think beyond certainty.</p>
+	<p><a href="contact">Book me</a> to speak at your next event.</p>
 	<nav>
 	  <p><a data-nav class="btn" href="work">Work <i class="ss-right"></i></a></p>
 	  <p><a data-nav class="btn" href="speaking">Speaking <i class="ss-right"></i></a></p>
 	  <p><a data-nav class="btn" href="contact">Contact <i class="ss-right"></i></a></p>
 	</nav> 
+</article>
+
+<article class="alt">
+	<blockquote class="left">
+		<p><span class="lquo">&ldquo;</span>Will is arguably one of the most amazing, inspiring and talented people in both our industry, and the wider community.</p>
+		<p>Work with him. You will not regret it.&rdquo;</p>
+		<cite>
+			<img src="design/images/people/charlie.png" alt="Charlie">
+			<a class="role" href="https://twitter.com/superhighfives">- Charlie Gleason</a>, 
+			<a class="" href="https://unbound.co.uk/">Head of Product, Unbound</a>
+		</cite>
+	</blockquote>
 </article>
 
 <article class="footer">
