--- a/htdocs/speaking.html
+++ b/htdocs/speaking.html
@@ -83,8 +83,8 @@
 	<nav>
 	  <p><a data-nav class="btn" href="#speaker-themes">Themes <i class="ss-right"></i></a></p>
 	  <p><a data-nav class="btn" href="#speaker-bio">Biography <i class="ss-right"></i></a></p>
-	  <p><a data-nav class="btn" href="#speaker-rider">Rider <i class="ss-right"></i></a></p>
 	  <p><a data-nav class="btn" href="#pics">Pictures <i class="ss-right"></i></a></p>
+	  <p><a data-nav class="btn" href="#speaker-rider">Rider <i class="ss-right"></i></a></p>
 	  <p><a data-nav class="btn" href="contact">Book me <i class="ss-right"></i></a></p>
 	</nav> 	
 </article>
@@ -149,6 +149,14 @@
 	<h3>Hi res pics</h3>
 	<p>Click to open in a new window.</p>
 	<p>
+		<a class="biopic" target="_blank" href="design/images/bio/will-dayble-laugh.jpg">
+			<img class="" src="design/images/aside/laff.jpg" alt="will-dayble">
+			<i class="ss-windows"></i>
+		</a>
+		<a class="biopic" target="_blank" href="design/images/bio/will-dayble-lf.jpg">
+			<img class="" src="design/images/aside/smirk.jpg" alt="will-dayble">
+			<i class="ss-windows"></i>
+		</a>
 		<a class="biopic" target="_blank" href="design/images/bio/will-dayble-hires.jpg">
 			<img class="" src="design/images/bio/will-dayble.jpg" alt="will-dayble">
 			<i class="ss-windows"></i>
@@ -161,14 +169,14 @@
 			<img class="" src="design/images/bio/will-dayble-by-mark-lobo.jpg" alt="will-dayble">
 			<i class="ss-windows"></i>
 		</a>
-		<p>Photo credits: Will Coverdale (1 & 2) and <a href="http://www.marklobo.com.au/" target="_blank">Mark Lobo</a> (3).</p>
-	</p>				
+		<p>Photo credits: <a target="_blank" href="https://www.instagram.com/leo_flander/">Leo Flander</a> (1 & 2), Will Coverdale (3 & 4) and <a href="http://www.marklobo.com.au/" target="_blank">Mark Lobo</a> (5).</p>
+	</p>
 	
 </article>	
 
 <article class="alt">
 	<blockquote>
-		<p><span class="lquo">&ldquo;</span>Practically all situations benefit from Will&rsquo;s involvement.&rdquo;</p>
+		<p><span class="lquo">&ldquo;</span>Practically all situations benefit<br> from Will&rsquo;s involvement.&rdquo;</p>
 		<cite>
 			- Frenchy, 
 			<a href="https://www.linkedin.com/in/sampstewart">Security specialist.</a>
