--- a/htdocs/work.html
+++ b/htdocs/work.html
@@ -71,8 +71,7 @@
 
 
 
-<aside class="optimus">
-</aside>
+<aside class="smirk"></aside>
 
 <article id="work">
 	<a data-nav class="btn btn-back" href="/"><i class="ss-left"></i> Home</a>
