--- a/htdocs/speaking.html
+++ b/htdocs/speaking.html
@@ -71,7 +71,7 @@
 
 
 
-<aside class="wanker"></aside>
+<aside class="smirk"></aside>
 
 <article id="speaking">
 	<a data-nav class="btn btn-back" href="/#"><i class="ss-left"></i> Home</a>
