contact office hours

--- a/htdocs/contact.html
+++ b/htdocs/contact.html
@@ -82,7 +82,9 @@
 	<p><a target="_blank" class="btn btn-icon" href="//twitter.com/willdayble"><i class="ss-social-regular ss-twitter"></i> @willdayble</a></p>
 	<p><a target="_blank" class="btn btn-icon" href="//linkedin.com/in/willdayble"><i class="ss-social-regular ss-linkedin"></i> willdayble</a></p>
 <!-- 	<p><a target="_blank" class="btn btn-icon" href="//facebook.com/willdayble"><i class="ss-social-regular ss-facebook"></i> willdayble</a></p> -->
-	<p><em>P.S. email or Twitter is best.</em></p>
+	<p>&nbsp;</p>
+	<p>If you&rsquo;re a founder and want advice, I do office hours:</p>
+	<p><a target="_blank" class="btn btn-icon" href="http://officehours.startupvictoria.com.au/#pt-section-18"><i class="ss-right"></i> Book via Startup Victoria</a></p>	
 </article>
 
 <article class="footer">
