go team contact

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -89,7 +89,11 @@
 	  <p><a data-nav class="btn" href="work">Work <i class="ss-right"></i></a></p>
 	  <p><a data-nav class="btn" href="speaking">Speaking <i class="ss-right"></i></a></p>
 	  <p><a data-nav class="btn" href="contact">Contact <i class="ss-right"></i></a></p>
-	</nav> 
+	</nav> 		
+		
+	<p>If you’re a founder and want advice, book via office hours:</p>
+	<p><a target="_blank" class="btn btn-icon" href="http://officehours.startupvictoria.com.au/#pt-section-18"><i class="ss-right"></i> Book via Startup Victoria</a></p>
+
 </article>
 
 <article class="alt">
