--- a/htdocs/contact.html
+++ b/htdocs/contact.html
@@ -77,7 +77,8 @@
 	<a data-nav class="btn btn-back" href="/"><i class="ss-left"></i> Home</a>
 	<h2>Let&rsquo;s begin.</h2>
 	
-	<p><a class="btn btn-icon" href="tel:1300205170"><i class="ss-phone"></i> 1300 205 170</a></p>
+	<p>To book me for a speaking engagement, <a href="mailto:will@willdayble.com">email</a> is best.</p>
+
 	<p><a target="_blank" class="btn btn-icon" href="mailto:will@willdayble.com"><i class="ss-mail"></i> will@willdayble.com</a></p>
 	<p><a target="_blank" class="btn btn-icon" href="//twitter.com/willdayble"><i class="ss-social-regular ss-twitter"></i> @willdayble</a></p>
 	<p><a target="_blank" class="btn btn-icon" href="//linkedin.com/in/willdayble"><i class="ss-social-regular ss-linkedin"></i> willdayble</a></p>
