--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -92,7 +92,7 @@
 	</nav> 		
 		
 	<p>If you’re a founder and want advice, book via office hours:</p>
-	<p><a target="_blank" class="btn btn-icon" href="http://officehours.startupvictoria.com.au/#pt-section-18"><i class="ss-right"></i> Book via Startup Victoria</a></p>
+	<p><a target="_blank" class="btn btn-icon" href="http://officehours.startupvictoria.com.au/#pt-section-25" target="_blank"><i class="ss-right"></i> Book via Startup Victoria</a></p>
 
 </article>
 
