--- a/htdocs/contact.html
+++ b/htdocs/contact.html
@@ -85,7 +85,7 @@
 <!-- 	<p><a target="_blank" class="btn btn-icon" href="//facebook.com/willdayble"><i class="ss-social-regular ss-facebook"></i> willdayble</a></p> -->
 	<p>&nbsp;</p>
 	<p>If you&rsquo;re a founder and want advice, I do office hours:</p>
-	<p><a target="_blank" class="btn btn-icon" href="http://officehours.startupvictoria.com.au/#pt-section-18"><i class="ss-right"></i> Book via Startup Victoria</a></p>	
+	<p><a target="_blank" class="btn btn-icon" href="http://officehours.startupvictoria.com.au/#pt-section-25" target="_blank"><i class="ss-right"></i> Book via Startup Victoria</a></p>	
 </article>
 
 <article class="footer">
